ports/dotnet/test/Antlr4C3.Tests/Grammar/WhiteboxParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Whitebox.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Antlr4C3.Tests.Grammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class WhiteboxParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		LOREM=1, IPSUM=2, DOLOR=3, SIT=4, AMET=5, CONSECTETUR=6, ADIPISCING=7, 
		WS=8;
	public const int
		RULE_test1 = 0, RULE_rule1 = 1, RULE_rule2 = 2, RULE_rule3 = 3, RULE_rule4 = 4, 
		RULE_rule5 = 5, RULE_test2 = 6, RULE_rule7 = 7, RULE_rule8 = 8, RULE_rule9 = 9, 
		RULE_rule10 = 10, RULE_rule11 = 11, RULE_test3 = 12, RULE_rule13 = 13, 
		RULE_test4 = 14, RULE_rule15 = 15, RULE_rule16 = 16, RULE_test5 = 17, 
		RULE_rule18 = 18, RULE_rule19 = 19, RULE_test6 = 20, RULE_rule21 = 21, 
		RULE_rule22 = 22, RULE_test7 = 23, RULE_test8 = 24;
	public static readonly string[] ruleNames = {
		"test1", "rule1", "rule2", "rule3", "rule4", "rule5", "test2", "rule7", 
		"rule8", "rule9", "rule10", "rule11", "test3", "rule13", "test4", "rule15", 
		"rule16", "test5", "rule18", "rule19", "test6", "rule21", "rule22", "test7", 
		"test8"
	};

	private static readonly string[] _LiteralNames = {
		null, "'LOREM'", "'IPSUM'", "'DOLOR'", "'SIT'", "'AMET'", "'CONSECTETUR'", 
		"'ADIPISCING'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "LOREM", "IPSUM", "DOLOR", "SIT", "AMET", "CONSECTETUR", "ADIPISCING", 
		"WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Whitebox.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static WhiteboxParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public WhiteboxParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public WhiteboxParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Test1Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Rule1Context rule1() {
			return GetRuleContext<Rule1Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADIPISCING() { return GetToken(WhiteboxParser.ADIPISCING, 0); }
		public Test1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_test1; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterTest1(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitTest1(this);
		}
	}

	[RuleVersion(0)]
	public Test1Context test1() {
		Test1Context _localctx = new Test1Context(Context, State);
		EnterRule(_localctx, 0, RULE_test1);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			rule1();
			State = 51;
			Match(ADIPISCING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule1Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Rule2Context rule2() {
			return GetRuleContext<Rule2Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONSECTETUR() { return GetToken(WhiteboxParser.CONSECTETUR, 0); }
		public Rule1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule1; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule1(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule1(this);
		}
	}

	[RuleVersion(0)]
	public Rule1Context rule1() {
		Rule1Context _localctx = new Rule1Context(Context, State);
		EnterRule(_localctx, 2, RULE_rule1);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			rule2();
			State = 54;
			Match(CONSECTETUR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule2Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOREM() { return GetToken(WhiteboxParser.LOREM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Rule3Context rule3() {
			return GetRuleContext<Rule3Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rule5Context rule5() {
			return GetRuleContext<Rule5Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SIT() { return GetTokens(WhiteboxParser.SIT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SIT(int i) {
			return GetToken(WhiteboxParser.SIT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AMET() { return GetToken(WhiteboxParser.AMET, 0); }
		public Rule2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule2; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule2(this);
		}
	}

	[RuleVersion(0)]
	public Rule2Context rule2() {
		Rule2Context _localctx = new Rule2Context(Context, State);
		EnterRule(_localctx, 4, RULE_rule2);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			Match(LOREM);
			State = 57;
			rule3();
			State = 58;
			rule5();
			State = 62;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SIT) {
				{
				{
				State = 59;
				Match(SIT);
				}
				}
				State = 64;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AMET) {
				{
				State = 65;
				Match(AMET);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule3Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Rule4Context rule4() {
			return GetRuleContext<Rule4Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOLOR() { return GetToken(WhiteboxParser.DOLOR, 0); }
		public Rule3Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule3; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule3(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule3(this);
		}
	}

	[RuleVersion(0)]
	public Rule3Context rule3() {
		Rule3Context _localctx = new Rule3Context(Context, State);
		EnterRule(_localctx, 6, RULE_rule3);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			rule4();
			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==DOLOR) {
				{
				State = 69;
				Match(DOLOR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule4Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IPSUM() { return GetToken(WhiteboxParser.IPSUM, 0); }
		public Rule4Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule4; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule4(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule4(this);
		}
	}

	[RuleVersion(0)]
	public Rule4Context rule4() {
		Rule4Context _localctx = new Rule4Context(Context, State);
		EnterRule(_localctx, 8, RULE_rule4);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IPSUM) {
				{
				State = 72;
				Match(IPSUM);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule5Context : ParserRuleContext {
		public Rule5Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule5; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule5(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule5(this);
		}
	}

	[RuleVersion(0)]
	public Rule5Context rule5() {
		Rule5Context _localctx = new Rule5Context(Context, State);
		EnterRule(_localctx, 10, RULE_rule5);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Test2Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Rule7Context rule7() {
			return GetRuleContext<Rule7Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADIPISCING() { return GetToken(WhiteboxParser.ADIPISCING, 0); }
		public Test2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_test2; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterTest2(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitTest2(this);
		}
	}

	[RuleVersion(0)]
	public Test2Context test2() {
		Test2Context _localctx = new Test2Context(Context, State);
		EnterRule(_localctx, 12, RULE_test2);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			rule7();
			State = 78;
			Match(ADIPISCING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule7Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Rule8Context rule8() {
			return GetRuleContext<Rule8Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONSECTETUR() { return GetToken(WhiteboxParser.CONSECTETUR, 0); }
		public Rule7Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule7; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule7(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule7(this);
		}
	}

	[RuleVersion(0)]
	public Rule7Context rule7() {
		Rule7Context _localctx = new Rule7Context(Context, State);
		EnterRule(_localctx, 14, RULE_rule7);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			rule8();
			State = 81;
			Match(CONSECTETUR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule8Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOREM() { return GetToken(WhiteboxParser.LOREM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Rule11Context rule11() {
			return GetRuleContext<Rule11Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rule9Context rule9() {
			return GetRuleContext<Rule9Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SIT() { return GetTokens(WhiteboxParser.SIT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SIT(int i) {
			return GetToken(WhiteboxParser.SIT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AMET() { return GetToken(WhiteboxParser.AMET, 0); }
		public Rule8Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule8; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule8(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule8(this);
		}
	}

	[RuleVersion(0)]
	public Rule8Context rule8() {
		Rule8Context _localctx = new Rule8Context(Context, State);
		EnterRule(_localctx, 16, RULE_rule8);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			Match(LOREM);
			State = 84;
			rule11();
			State = 85;
			rule9();
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SIT) {
				{
				{
				State = 86;
				Match(SIT);
				}
				}
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AMET) {
				{
				State = 92;
				Match(AMET);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule9Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Rule10Context rule10() {
			return GetRuleContext<Rule10Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOLOR() { return GetToken(WhiteboxParser.DOLOR, 0); }
		public Rule9Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule9; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule9(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule9(this);
		}
	}

	[RuleVersion(0)]
	public Rule9Context rule9() {
		Rule9Context _localctx = new Rule9Context(Context, State);
		EnterRule(_localctx, 18, RULE_rule9);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			rule10();
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==DOLOR) {
				{
				State = 96;
				Match(DOLOR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule10Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IPSUM() { return GetToken(WhiteboxParser.IPSUM, 0); }
		public Rule10Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule10; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule10(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule10(this);
		}
	}

	[RuleVersion(0)]
	public Rule10Context rule10() {
		Rule10Context _localctx = new Rule10Context(Context, State);
		EnterRule(_localctx, 20, RULE_rule10);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IPSUM) {
				{
				State = 99;
				Match(IPSUM);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule11Context : ParserRuleContext {
		public Rule11Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule11; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule11(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule11(this);
		}
	}

	[RuleVersion(0)]
	public Rule11Context rule11() {
		Rule11Context _localctx = new Rule11Context(Context, State);
		EnterRule(_localctx, 22, RULE_rule11);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Test3Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOREM() { return GetToken(WhiteboxParser.LOREM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Rule13Context rule13() {
			return GetRuleContext<Rule13Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONSECTETUR() { return GetToken(WhiteboxParser.CONSECTETUR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IPSUM() { return GetToken(WhiteboxParser.IPSUM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] AMET() { return GetTokens(WhiteboxParser.AMET); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AMET(int i) {
			return GetToken(WhiteboxParser.AMET, i);
		}
		public Test3Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_test3; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterTest3(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitTest3(this);
		}
	}

	[RuleVersion(0)]
	public Test3Context test3() {
		Test3Context _localctx = new Test3Context(Context, State);
		EnterRule(_localctx, 24, RULE_test3);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			Match(LOREM);
			State = 106;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IPSUM) {
				{
				State = 105;
				Match(IPSUM);
				}
			}

			State = 108;
			rule13();
			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 109;
				Match(AMET);
				}
				}
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==AMET );
			State = 114;
			Match(CONSECTETUR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule13Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DOLOR() { return GetTokens(WhiteboxParser.DOLOR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOLOR(int i) {
			return GetToken(WhiteboxParser.DOLOR, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SIT() { return GetTokens(WhiteboxParser.SIT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SIT(int i) {
			return GetToken(WhiteboxParser.SIT, i);
		}
		public Rule13Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule13; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule13(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule13(this);
		}
	}

	[RuleVersion(0)]
	public Rule13Context rule13() {
		Rule13Context _localctx = new Rule13Context(Context, State);
		EnterRule(_localctx, 26, RULE_rule13);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DOLOR || _la==SIT) {
				{
				{
				State = 116;
				_la = TokenStream.LA(1);
				if ( !(_la==DOLOR || _la==SIT) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 121;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Test4Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOREM() { return GetToken(WhiteboxParser.LOREM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Rule15Context rule15() {
			return GetRuleContext<Rule15Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rule16Context rule16() {
			return GetRuleContext<Rule16Context>(0);
		}
		public Test4Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_test4; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterTest4(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitTest4(this);
		}
	}

	[RuleVersion(0)]
	public Test4Context test4() {
		Test4Context _localctx = new Test4Context(Context, State);
		EnterRule(_localctx, 28, RULE_test4);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 122;
			Match(LOREM);
			State = 125;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				State = 123;
				rule15();
				}
				break;
			case 2:
				{
				State = 124;
				rule16();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule15Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IPSUM() { return GetToken(WhiteboxParser.IPSUM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOLOR() { return GetToken(WhiteboxParser.DOLOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SIT() { return GetToken(WhiteboxParser.SIT, 0); }
		public Rule15Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule15; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.EnterRule15(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IWhiteboxListener typedListener = listener as IWhiteboxListener;
			if (typedListener != null) typedListener.ExitRule15(this);
		}
	}
